--- a/README
+++ b/README
@@ -16,3 +16,21 @@
 manage.py - python django runfile
 serv - run develop server on 8000 port shortcut
 
+
+
+
+grafiks/management/commands/
+	manage.py add_month	pievieno mēnesi
+	manage.py add_day	pievieno dienu pēc mēneša, ja tādas vēl nav	palaižas no crontab katru nakti 00:05
+
+
+klienti/management/commands/
+	manage.py clear_tel	notīra Klienti telefonus no '+371' un '+371 '
+	manage.py check_kli	skaita vienādos vārdus, telefonus
+	manage.py chech_pier	meklē pierakstus uz vecām darbadienām
+
+
+pieraksts/management/commands/
+	transfer.py transfer	DB imports no widgeta
+
+3136 Pierakstis
