added treneru aizvietosana

--- a/grafiks/templates/README
+++ b/grafiks/templates/README
@@ -1,4 +1,4 @@
-add_plan.html	- Nodarbības pievienošanas forma	- OK
+add_plan.html	- Nodarbības pievienošanas forma
 
 del_plan.html	- Nodarbības dzēšana no plānotāja	- NOPE
 tren_aizv.html	- Treneru aizvietošana			- NOPE
