--- a/grafiks/templates/README
+++ b/grafiks/templates/README
@@ -1,9 +1,10 @@
 add_plan.html	- Nodarbības pievienošanas forma
 
-del_plan.html	- Nodarbības dzēšana no plānotāja	- NOPE
-tren_aizv.html	- Treneru aizvietošana			- NOPE
+tren_aizv.html	- Nodarbības izvēle + Treneru aizvietošana forma
 
-nod_plan.html	- Nodarbības atcelšana			- OK
+nod_plan.html	- Nodarbības atcelšana
+
+del_plan.html	- Nodarbības dzēšana no plānotāja	- NOPE
 
 
 day_header.html		- Pierakstu dienu Tabi
